# Simple-DBMS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  database.cpp  database.h  install.sh  main.cpp  parser.cpp  parser.h  where.cpp  where.h
